<resources>
    <string name="app_name">MarketInventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete_item">DELETE ITEM</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="example_item_name">Apples</string>
    <string name="example_item_price">2.5</string>
    <string name="example_item_quantity">84</string>
    <string name="item_name">Item Name:</string>
    <string name="price_detail">Price:</string>
    <string name="quantity_in_stock_detail">Quantity In Stock:</string>
    <string name="delete_all_items">Delete All Items</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="undo">UNDO</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="sort_by_quantity">Sort by quantity</string>
    <string name="total_income">Total income:</string>
    <string name="sell_item">SELL ITEM</string>
    <string name="successfully_deleted">Successfully deleted</string>
</resources>