<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete_all"
        android:contentDescription="@string/delete_all_items"
        android:title="@string/delete_all_items" />
    <item
        android:id="@+id/menu_search_item"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort_item"
        android:contentDescription="@string/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_price"
                android:title="@string/sort_by_price" />

            <item
                android:id="@+id/action_sort_by_quantity"
                android:title="@string/sort_by_quantity" />
        </menu>

    </item>
</menu>